--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
 <head>
+    <base href="/">
     <title>Angular 2 QuickStart</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 
     <!-- 1. Load libraries -->
     <!-- IE required polyfills, in this exact order -->
@@ -33,5 +35,7 @@
 <!-- 3. Display the application -->
 <body>
 <my-app>Loading...</my-app>
+
+<script src="node_modules/angular2/bundles/router.dev.js"></script>
 </body>
 </html>
